# preqs

./: LICENSE  MANIFEST.in  README.md  build.sh  pyproject.toml  requirements.txt
preqs/: .mappings  __init__.py  enums.py  preqs.py  requirements.txt
preqs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
pylintr/: pylintr.sh
pylintr/results/: build_mod0.plr  build_mod1.plr  build_mod2.plr  pkg0_mod0.plr  pkg1_mod0.plr  preqs_check.plr  preqs_enums.plr  preqs_preqs.plr  project_mod0.plr  subpkg0_submod0.plr  subpkg0_submod1.plr  summary.plr  testlibs_msgs.plr  tests_base.plr  tests_template.plr  tests_test_preqs.plr
tests/: .coverage  .coveragerc  base.py  coverage.sh  run.sh  template.py  test_check.py  test_preqs.py
tests/resources/pkg0/: mod0.py
tests/resources/pkg1/subpkg0/: submod1.py
tests/resources/pkg4/project/: mod0.py
tests/resources/pkg5/: .coverage  mod0.py  requirements.txt
tests/testlibs/: msgs.py
