[build-system]
requires = ["wheel", "setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "preqs"
description = "A simple (and fast) requirements.txt file generator."
authors = [{name = "J. Berendt", email = "support@s3dev.uk"}]
classifiers = [
               "Programming Language :: Python :: 3.6",
               "Programming Language :: Python :: 3.7",
               "Programming Language :: Python :: 3.8",
               "Programming Language :: Python :: 3.9",
               "Programming Language :: Python :: 3.10",
               "Programming Language :: Python :: 3.11",
               "Programming Language :: Python :: 3.12",
               "License :: OSI Approved :: MIT License",
               "Operating System :: POSIX :: Linux",
               "Operating System :: Microsoft :: Windows",
               "Operating System :: Microsoft :: Windows :: Windows 7",
               "Operating System :: Microsoft :: Windows :: Windows 10",
               "Operating System :: Microsoft :: Windows :: Windows 11",
               "Topic :: Software Development",
               "Topic :: Software Development :: Libraries",
               "Topic :: Utilities"
              ]
dependencies = []
dynamic = ["version"]
license = {file = "LICENSE"}
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.6"

[project.urls]
Homepage = "https://github.com/s3dev/preqs"
Repository = "https://github.com/s3dev/preqs"

[tool.setuptools.dynamic]
version = {attr = "preqs.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["preqs"]
exclude = []

[project.scripts]
preqs = "preqs.preqs:main"
